Issue with alignment of buttons on timer display

--- a/client/src/sass/01-base/base-App-styles.scss
+++ b/client/src/sass/01-base/base-App-styles.scss
@@ -8,7 +8,7 @@ html {
   font-size: 1.4rem;
 
   height: 100vh;
-
+  width: 100%;
   h1 {
     font-size: 2.8rem;
   }
