--- a/client/src/sass/02-variables/colors.scss
+++ b/client/src/sass/02-variables/colors.scss
@@ -1,3 +1,4 @@
-$color-primary: #0075f2;
+$color-primary: #8cc8da;
 $color-secondary: #e7eb90;
 $color-tertiary: #086788;
+$color-study-period: #8dd288;
